# kryptohash

./: COPYING  INSTALL  Makefile.am  README.md  configure.ac
MSVC/: KryptohashSolution.sln
MSVC/kryptohashCLI/: kryptohashCLI.vcxproj
MSVC/kryptohashD/: KryptohashD.vcxproj
MSVC/kryptohashQt/: kryptohashQt.pro  kryptohashQt.sln  kryptohashQt.vcxproj  kryptohashQt.vcxproj.filters
MSVC/libed25519/: libed25519.vcxproj
MSVC/libkeccak32/: libkeccak32.vcxproj
MSVC/libkeccak64/: libkeccak64.vcxproj
MSVC/libkryptohash/: libkryptohash.vcxproj
MSVC/libleveldb/: libleveldb.vcxproj
doc/: Doxyfile  README.md  README_windows.txt  assets-attribution.md  build-msw.md  build-osx.md  build-unix.md  coding.md  multiwallet-qt.md  release-notes.md  tor.md
share/: setup.nsi.in  ui.rc
share/qt/: Info.plist  Info.plist.in  extract_strings_qt.py
src/: Makefile.am  Makefile.include  addrman.h  alert.cpp  alert.h  base58.cpp  bignum.h  bloom.cpp  bloom.h  chainparams.cpp  chainparams.h  checkpoints.cpp  checkpoints.h  clientversion.h  coincontrol.h  coins.cpp  coins.h  core.cpp  core.h  crypter.cpp  genesis.cpp  genesis.h  hash.cpp  hash.h  init.cpp  init.h  key.cpp  key.h  kryptohash-cli-res.rc  kryptohash-cli.cpp  kryptohash-config.h  kryptohashd-res.rc  kryptohashd.cpp  kryptohashnet.h  main.cpp  main.h  merkle.cpp  merkle.h  miner.cpp  miner.h  (+33 more)
src/ed25519/: ed25519.h  keypair.c  sign.c  verify.c
src/keccak/KeccakF-1600/Optimized64/: KeccakF-1600-opt64.c
src/leveldb/db/: log_reader.cc
src/m4/: kryptohash_find_bdb53.m4
src/qt/: Makefile.am  addressbookpage.cpp  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  clientmodel.cpp  coincontroldialog.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  intro.cpp  kryptohash.cpp  kryptohash.qrc  kryptohashaddressvalidator.cpp  kryptohashamountfield.cpp  kryptohashgui.cpp  kryptohashgui.h  kryptohashstrings.cpp  kryptohashunits.cpp  notificator.h  openuridialog.cpp  optionsdialog.cpp  optionsmodel.cpp  overviewpage.cpp  paymentserver.cpp  qvalidatedlineedit.cpp  receivecoinsdialog.cpp  receiverequestdialog.cpp  recentrequeststablemodel.cpp  rpcconsole.cpp  sendcoinsdialog.cpp  sendcoinsentry.cpp  signverifymessagedialog.cpp  splashscreen.cpp  transactiondesc.cpp  transactionrecord.cpp  transactionrecord.h  transactiontablemodel.cpp  transactionview.cpp  utilitydialog.cpp  (+4 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_ach.ts  bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_ca_ES.ts  bitcoin_cmn.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_es_DO.ts  bitcoin_es_MX.ts  bitcoin_es_UY.ts  bitcoin_et.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_fr_CA.ts  bitcoin_gl.ts  bitcoin_gu_IN.ts  bitcoin_he.ts  bitcoin_hi_IN.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_id_ID.ts  bitcoin_it.ts  bitcoin_ja.ts  bitcoin_ka.ts  bitcoin_kk_KZ.ts  (+30 more)
src/qt/res/: kryptohash-qt-res.rc
src/qt/test/: test_main.cpp
